--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>HTML Clean Up Lab</title>
 </head>
 
+<body>
 <!-- Giovanni Quizhpi -->
 <!--ITMD 361-->
 <!--An adorable little first year-->
@@ -14,7 +15,7 @@
 
   <header id="header">
     <a id="logo1" href="index.html">
-      <img src="logo3.png">
+      <img src="logo3.png"alt="Logo">
     </a>
     <h1>My Demo Site</h1>
 </header>
@@ -64,7 +65,7 @@
        <h3>Interesting Articles</h3>
        <ol id="news"> 
         <li>
-          <a href="#"><Article 1</a>
+          <a href="#"></a><Article 1</a>
           <div><p>Preview of very interesting article article</p></div>
         </li>
         <a href="#"><Article 3</a>
