--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <div id="page-wrapper">
 
   <header id="header">
-    <a id="logo1" href="index.html">
-      <img src="logo3.png"alt="Logo">
+    <a id="logo3" href="index.html">
+      <img src="logo3.png" alt="Logo">
     </a>
     <h1>My Demo Site</h1>
 </header>
@@ -33,7 +33,7 @@
 <main id="content-wrapper">
   <div id="main-content">
     <h2><strong>This is our h2 Tag</strong></h2>
-    <img class="imageR" src="./images/main.png">
+    <img class="imageR" src="main.png"alt="Main">
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
@@ -60,21 +60,20 @@
 
           <iframe width="400" height="300" src="https://www.youtube.com/embed/-jn9aaNn8_I?si=D1HhLAWQ5awY9BfU frameborder="0" allowfullscreen></iframe>
         </div>
-      </div>
+
       <aside id="side-content">
        <h3>Interesting Articles</h3>
        <ol id="news"> 
-        <li>
-          <a href="#"></a><Article 1</a>
+        <li><a href="#">Article 1</a>
           <div><p>Preview of very interesting article article</p></div>
         </li>
-        <a href="#"><Article 3</a>
+        <a href="#">Article 2</a>
           <div><p>Preview of very interesting article article</p></div>
         </li>
-          <a href="#"><Article 3</a>
+          <a href="#">Article 3</a>
           <div><p>Preview of very interesting article article</p></div>
         </li>
-          <a href="#"><Article 4</a>
+          <a href="#">Article 4</a>
           <div><p>Preview of very interesting article article</p></div>
         </li>
      </ol>
