--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <main id="content-wrapper">
   <div id="main-content">
     <h2><strong>This is our h2 Tag</strong></h2>
-    <img class="imageR" src="main.png"alt="Main">
+    <img class="imageR" src="main.png" alt="Main">
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
@@ -58,7 +58,7 @@
 
         <div id="center">
 
-          <iframe width="400" height="300" src="https://www.youtube.com/embed/-jn9aaNn8_I?si=D1HhLAWQ5awY9BfU frameborder="0" allowfullscreen></iframe>
+          <iframe width="400" height="300" src="https://www.youtube.com/embed/-jn9aaNn8_I?si=D1HhLAWQ5awY9BfU" frameborder= "0" allowfullscreen></iframe>
         </div>
 
       <aside id="side-content">
