--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 </nav>
 
 <main id="content-wrapper">
-  <div id="main-content">
+  <div id="main-content"></div>
     <h2><strong>This is our h2 Tag</strong></h2>
-    <img class="imageR" src="main.png" alt="Main">
+    <img class="imageR" src="main.png"  alt="Main">
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
@@ -63,28 +63,26 @@
 
       <aside id="side-content">
        <h3>Interesting Articles</h3>
+
        <ol id="news"> 
-        <li><a href="#">Article 1</a>
+        <li>
+          <a href="#">Article 1</a>
           <div><p>Preview of very interesting article article</p></div>
-        </li>
-        <a href="#">Article 2</a>
+          <a href="#">Article 2</a>
           <div><p>Preview of very interesting article article</p></div>
-        </li>
           <a href="#">Article 3</a>
           <div><p>Preview of very interesting article article</p></div>
-        </li>
           <a href="#">Article 4</a>
           <div><p>Preview of very interesting article article</p></div>
         </li>
      </ol>
     </aside>
-   </main>
-  
+
  <footer id = "footer" >
     <p>Footer Content is here</p>
   </footer>
 
-
+      </main>
    </div>
 </body>
 </html>
