--- a/index.html
+++ b/index.html
@@ -5,27 +5,25 @@
   <meta charset="UTF-8">
   <title>HTML Clean Up Lab</title>
 </head>
-
 <body>
 <!-- Giovanni Quizhpi -->
 <!--ITMD 361-->
 <!--An adorable little first year-->
 
 <div id="page-wrapper">
-
   <header id="header">
     <a id="logo3" href="index.html">
-      <img src="logo3.png" alt="Logo">
+      <img src="logo3.png" alt="Logo" />
     </a>
     <h1>My Demo Site</h1>
 </header>
 
 <nav id="main-nav">
   <ul>
-    <li><a href = "http://www.iit.edu">IIT Home</a></li>
+    <li><a href= "http://www.iit.edu">IIT Home</a></li>
     <li><a href="http://www.google.com">Google</a></li>
     <li><a href="http://www.microsoft.com">Microsoft</a></li>
-    <li><a href = "http://www.cnn.com">CNN</a></li>
+    <li><a href= "http://www.cnn.com">CNN</a></li>
     <li><a href="http://admissions.iit.edu">IIT Admissions</a></li>
   </ul>
 </nav>
@@ -33,7 +31,7 @@
 <main id="content-wrapper">
   <div id="main-content"></div>
     <h2><strong>This is our h2 Tag</strong></h2>
-    <img class="imageR" src="main.png"  alt="Main">
+    <img class="imageR" src="main.png" alt="Main">
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
@@ -65,17 +63,16 @@
        <h3>Interesting Articles</h3>
 
        <ol id="news"> 
-        <li>
+        
           <a href="#">Article 1</a>
-          <div><p>Preview of very interesting article article</p></div>
+          <li><div><p>Preview of very interesting article article</p></div></li>
           <a href="#">Article 2</a>
-          <div><p>Preview of very interesting article article</p></div>
+          <li><div><p>Preview of very interesting article article</p></div></li>
           <a href="#">Article 3</a>
-          <div><p>Preview of very interesting article article</p></div>
+          <li><div><p>Preview of very interesting article article</p></div></li>
           <a href="#">Article 4</a>
-          <div><p>Preview of very interesting article article</p></div>
-        </li>
-     </ol>
+          <li><div><p>Preview of very interesting article article</p></div></li>
+        </ol>
     </aside>
 
  <footer id = "footer" >
