--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
        <ol id="news"> 
           <li>
           <a href="#">Article 1</a>
-          <li><div><p>Preview of very interesting article article</p></div></li>
+          <div><p>Preview of very interesting article article</p></div>
 
           <a href="#">Article 2</a>
-          <li><div><p>Preview of very interesting article article</p></div></li>
+          <div><p>Preview of very interesting article article</p></div>
 
           <a href="#">Article 3</a>
-          <li><div><p>Preview of very interesting article article</p></div></li>
+          <div><p>Preview of very interesting article article</p></div>
 
           <a href="#">Article 4</a>
-          <li><div><p>Preview of very interesting article article</p></div></li>
+          <div><p>Preview of very interesting article article</p></div>
         </li>
       </ol>
     </aside>
