--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="page-wrapper">
   <header id="header">
     <a id="logo3" href="index.html">
-      <img src="logo3.png" alt="Logo" />
+      <img src="logo3.png" alt="Logo">
     </a>
     <h1>My Demo Site</h1>
 </header>
@@ -54,10 +54,17 @@
           <li>List 4</li>        
         </ul>
 
-        <div id="center">
-
-          <iframe width="400" height="300" src="https://www.youtube.com/embed/-jn9aaNn8_I?si=D1HhLAWQ5awY9BfU" frameborder= "0" allowfullscreen></iframe>
-        </div>
+      <div id="center">
+        <iframe
+          width="400"
+          height="300"
+          src="https://www.youtube.com/embed/-jn9aaNn8_I?si=D1HhLAWQ5awY9BfU"
+          title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share; fullscreen"
+          allowfullscreen
+          style="border:none;"
+  ></iframe>
+</div>
 
       <aside id="side-content">
        <h3>Interesting Articles</h3>
